--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="photoGeneration.js"></script>
+    <script src="header.js"></script>
     <script type="text/javascript" src="js/instafeed.min.js"></script>
 
 
@@ -420,9 +421,9 @@
             
             <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" class="form-control" id="tempSearch" placeholder="Search">
               </div>
-              <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span></button>
+              <button type="submit" class="btn btn-primary" onClick="submitSearch(); return false;"><span class="glyphicon glyphicon-search"></span></button>
             </form>
 
           </div><!--/.nav-collapse -->
