--- a/buy.html
+++ b/buy.html
@@ -920,8 +920,15 @@
                     }else{
                       hour=d.getHours();
                     }
-                    alert(hour)
-                    tempMessage.set("time", hour+":"+d.getMinutes())
+                    var minutes;
+                    if(d.getMinutes()<10){
+                      alert(d.getMinutes())
+                      minutes="0"+d.getMinutes();
+                    }else{
+                      minutes=d.getMinutes();
+                    }
+                    //alert(hour)
+                    tempMessage.set("time", hour+":"+minutes)
                     tempMessage.set("date", d.getMonth()+1+"/"+d.getDate()+"/"+d.getFullYear());
                     tempMessage.save();
                     location.reload();
@@ -964,17 +971,21 @@
                   for (var i = results.length-1; i > -1; i--) { 
                     var object = results[i];
                     commentFinalObj += "<div>"
-                    commentFinalObj += '<div class="dropdown">'
-                    commentFinalObj += '<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">'
+                    commentFinalObj += '<div class="dropdown" style="display:inline">'
+                    commentFinalObj += '<button class="btn btn-default btn-xs dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">'
                     commentFinalObj += '<span class="caret"></span>'
                     commentFinalObj += '</button>'
                     commentFinalObj += '<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">'
                     commentFinalObj += '<li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-flag"></span> report</a></li>'
-                    commentFinalObj += '<li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-pencil"></span> edit</a></li>'
-                    commentFinalObj += '<li id="button'+i+'" role="presentation"><a role="menuitem" tabindex="-1" onClick="trashMessage("'+results[i].id+'")"><span class="glyphicon glyphicon-trash"></span> delete</a></li>'
+                    if(Parse.User.current().get("username")==results[i].get("user")){
+                      commentFinalObj += '<li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-pencil"></span> edit</a></li>'
+                      commentFinalObj += '<li id="button'+i+'" role="presentation"><a role="menuitem" tabindex="-1" onClick="trashMessage("'+results[i].id+'")"><span class="glyphicon glyphicon-trash"></span> delete</a></li>'
+                    }else{
+                      //alert(Parse.)
+                    }
                     commentFinalObj += '</ul>'
                     commentFinalObj += '</div>'
-                    commentFinalObj += "<p><font color='#808080'>at "+results[i].get("time")+" on "+results[i].get("date")+", <strong>"+results[i].get("user")+"</strong> said:</font> </p>"
+                    commentFinalObj += "<p style='display:inline; padding-left: 10px'><font color='#808080'>at "+results[i].get("time")+" on "+results[i].get("date")+", <strong>"+results[i].get("user")+"</strong> said:</font> </p>"
                     commentFinalObj += "<p>"+results[i].get("comment")+"</p>"
                     //commentFinalObj += "<div>"
                     if(results[i].get("user")==currentUser.get("username")){
@@ -995,7 +1006,7 @@
             </script>
             <script>
               var trashMessage=function(x){
-                alert(x)
+                //alert(x)
                 var r = confirm("Are you sure you want to delete this comment?");
                   if (r == true) {
                       myObject.destroy({
@@ -1008,7 +1019,6 @@
                       }
                     });
                   } else {
-                      x = "You pressed Cancel!";
                   }
               }
             </script>
