Linked Customer Service Page to Homepage, Changed Static Navbar in Customer Service

--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@ Parse.initialize("Ycnw3xJDv5iT8avNOo54rTM0kuTJpNMMwsMs4iIP", "qYnG7XTl8iSLu9M5iP
 
               <li><a href="terms.html" class="footer-text" target="_blank">terms</a> &nbsp;/</li>
               <li><a href="privacy.html" class="footer-text" target="_blank">privacy</a> &nbsp;/</li>
-              <li><a href="#" class="footer-text">help</a> &nbsp;/</li>
+              <li><a href="contactDashboard.html?filter=faq" class="footer-text">help</a> &nbsp;/</li>
               <li><a href="contact.html" class="footer-text" target="_blank">contact</a></li>
             </ul>
           </div>
