Fixed search redirect

--- a/buy.html
+++ b/buy.html
@@ -1118,7 +1118,7 @@
                       <input type="hidden" name="cmd" value="_xclick">
                       <input type="hidden" name="business" value="maddynakada-facilitator@gmail.com">
                       <input type="hidden" name="bn" value="JavaScriptButton_buynow"><input type="hidden" name="env" value="www"></form>
-
+                      <!--Need to set value-->
                     <button id="paypalBtn" class="btn btn-primary" style="width:100%;" onclick="setForm()"><img src="https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif" align="center" style="margin-right:7px;"></button>
 
                     <script>
