--- a/search.html
+++ b/search.html
@@ -417,7 +417,7 @@
               <div class="form-group">
                 <input id="submitSearch" type="search" class="form-control" placeholder="Search">
               </div>
-              <button type="submit" class="btn btn-primary" onclick="searchStuff()"><span class="glyphicon glyphicon-search"></span></button>
+              <button type="submit" class="btn btn-primary" onclick="searchStuff(); return false;"><span class="glyphicon glyphicon-search"></span></button>
             </form>
 
             <script>
@@ -460,7 +460,12 @@
                 searchitem = "search.html?" + searchitem + query;
                 alert(searchitem)
                 var url = searchitem;
-                alert("test")
+                alert("test " + url);
+                alert("location is " + window.location)
+                window.location.replace(url);
+                //window.location.reload();
+                //window.location.href = 'http://www.google.com';
+                alert("did location change?")
                 //window.location.replace("http://stackoverflow.com");
               }
               else
@@ -468,6 +473,7 @@
                 alert("There is nothing typed in the search field")
               }
               alert("this is the final alert")
+              return true;
             }
             </script>
             
